<resources>
    <string name="app_name">IceStore</string>
    <string name="welcome_to_icestore">Welcome to IceStore</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="forgot_password_button_text">Forgot password ?</string>
    <string name="ruzaki">Ruzaki</string>
</resources>
